# IbisPluginsExtraSEEG

./: README.md
SEEGAtlas/: CMakeLists.txt  ContactsListTableWidget.cpp  ContactsListTableWidget.h  NameInputDialog.cpp  NameInputDialog.h  NameInputDialog.ui  Point3DInputDialog.cpp  Point3DInputDialog.h  Point3DInputDialog.ui  SEEGAtlasWidget.cpp  SEEGAtlasWidget.h  SEEGAtlasWidget.ui  SEEGPointRepresentation.cpp  SEEGPointRepresentation.h  SEEGTrajVisWidget.cpp  SEEGTrajVisWidget.h  SolidVolumeView.cpp  SolidVolumeView.h  declare-plugin.cmake  seegatlasplugininterface.cpp  seegatlasplugininterface.h
SEEGAtlas/core/: BasicTypes_LINUX.h  BasicTypes_MAC.h  FileUtils.cpp  FileUtils.h  GeneralTransform.cpp  GeneralTransform.h  ImageTypes.h  ItkUtils.cpp  ItkUtils.h  MathUtils.cpp  MathUtils.h  VolumeTypes.cpp  VolumeTypes.h
SEEGAtlas/itkext/: BlobSizeImageFilter.h  BlobSizeImageFilter.txx  FullMIPImageFilter.h  FullMIPImageFilter.txx  SignedWindowedMIPImageFilter.h  SignedWindowedMIPImageFilter.txx  WindowedMIPImageFilter.h  WindowedMIPImageFilter.txx
SEEGAtlas/planning/: DistanceFromTrajectoryImageFilter.h  DistanceFromTrajectoryImageFilter.txx  TrajectoryROIPipeline.cpp  TrajectoryROIPipeline.h
SEEGAtlas/seegplanning/: BipolarChannelModel.cpp  BipolarChannelModel.h  ChannelInfo.cpp  ChannelInfo.h  ContactInfo.cpp  ContactInfo.h  ElectrodeInfo.cpp  ElectrodeInfo.h  SEEGContactsROIPipeline.cpp  SEEGContactsROIPipeline.h  SEEGElectrodeModel.cpp  SEEGElectrodeModel.h  SEEGElectrodesCohort.cpp  SEEGElectrodesCohort.h  SEEGFileHelper.cpp  SEEGFileHelper.h  SEEGPathPlanner.cpp  SEEGPathPlanner.h  SEEGROIPipeline.cpp  SEEGROIPipeline.h  SEEGTrajectoryROIPipeline.cpp  SEEGTrajectoryROIPipeline.h
SEEGAtlas/visualization/: BasicVolumeVisualizer2D.cpp  BasicVolumeVisualizer2D.h  ProbeEyeView.cpp  ProbeEyeView.h  SolidVolumeView.cpp  SolidVolumeView.h  TrajectoryView2D.cpp  TrajectoryView2D.h
